@@ -7,9 +7,9 @@
 ** NAT code taken from the OpenBSD NAT code by
 ** Slawomir Piotrowski <slawek@telsatgp.com.pl>
 **
-** Modifications Copyright (C) 1998-2003 Ryan McCabe <ryan@numb.org>
+** Modifications Copyright (C) 1998-2006 Ryan McCabe <ryan@numb.org>
 **
-** All IPv6 code Copyright 2002-2003 Ryan McCabe <ryan@numb.org>
+** All IPv6 code Copyright 2002-2006 Ryan McCabe <ryan@numb.org>
 */
 
 #include <config.h>
@@ -218,6 +218,15 @@ static struct file *get_file(void) {
 	temp_file = (struct file *) ((char *) temp_file + sizeof(struct filelist));
 
 	return (temp_file);
+}
+
+/*
+** System dependend initialisation. Call only once!
+** On failure, return false.
+*/
+
+bool core_init(void) {
+	return (true);
 }
 
 /*
