@@ -1,6 +1,6 @@
 /*
 ** openbsd29.c - Low level kernel access functions for OpenBSD 2.9 and greater
-** Copyright (C) 2001-2003 Ryan McCabe <ryan@numb.org>
+** Copyright (C) 2001-2006 Ryan McCabe <ryan@numb.org>
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License, version 2,
@@ -45,6 +45,15 @@
 #include <oidentd_options.h>
 
 extern struct sockaddr_storage proxy;
+
+/*
+** System dependend initialisation. Call only once!
+** On failure, return false.
+*/
+
+bool core_init(void) {
+	return (true);
+}
 
 /*
 ** Return the UID of the connection owner
