@@ -3,7 +3,7 @@
 **
 ** Copyright (c) 1995-1997	Casper Dik <Casper.Dik@Holland.Sun.COM>
 ** Copyright (c) 1997		Peter Eriksson <pen@lysator.liu.se>
-** Copyright (c) 2001-2003	Ryan McCabe <ryan@numb.org>
+** Copyright (c) 2001-2006	Ryan McCabe <ryan@numb.org>
 **
 ** This program is free software; you can redistribute it and/or
 ** modify it as you wish - as long as you don't claim that you wrote
@@ -156,6 +156,14 @@ static int getbuf(kvm_t *kd, off_t addr, void *dst, size_t len) {
 	return (0);
 }
 
+/*
+** System dependend initialisation. Call only once!
+** On failure, return false.
+*/
+
+bool core_init(void) {
+	return (true);
+}
 
 /*
 ** Return the UID of the connection owner
