@@ -1,6 +1,6 @@
 /*
 ** oidentd_inet_util.c - oidentd network utility functions.
-** Copyright (C) 2001-2003 Ryan McCabe <ryan@numb.org>
+** Copyright (C) 2001-2006 Ryan McCabe <ryan@numb.org>
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License, version 2,
