@@ -1,3 +1,7 @@
+Thu Jan 26 16:32:18 CET 2006    Christof Douma <christof@douma.eu.org>
+
+    * Open masquerading options before dropping permissions on linux.
+
 Fri Jul 11 10:11:38 EDT 2003    Ryan McCabe <ryan@numb.org>
 
     * Really fix the bug with random ident replies.
